7/9/05 (jasonp_sf)
  * Free unneeded arrays before the classical siever starts; reduces
    memory use by more than half for large factorizations
  * For the classical siever, set up each large factor base prime for
    the next sieve line immediately after the prime is used. Also 
    collapse some operations scanning the sieve array. These two combine 
    for a small speedup (~5%).

7/6/05 (frmky)
  * Applied a patch by Jason Papadopoulos to the classical sieve to fix an
    incorrect initialization when the factor base is very small (under 
    65536). 

7/5/05 (trilliwig)
  * Moved crossover for the Kleinjung/Franke poly tool a little lower, so
    Monico's poly tool doesn't try to make a quintic poly for 98-99 digit
    numbers.  Added Kleinjung/Franke parameters for 98-99 digits.

7/3/05 (trilliwig)
  * Used suggestion by G.W. Reynolds to raise murphymax values for pol5 to
    avoid memory issues in pol51opt.  It should have the added bonus of
    getting to the good polynomials faster.  However, there are still many
    instances remaining where pol51m0b dies with the message "lambda-comp"
    or "ull5a5p-comp".
  * Moved -wt option help text from matsolve to matbuild.  Also updated the
    Perl script to use the -wt option with matbuild, not matsolve.  Allowed
    "matsolve --help" to print help text if a depinf file does not exist.
  * Added support in the Perl script of lss and mrif parameters in the .poly
    file.  They correspond to $LATSIEVE_SIDE and $maxRelsInFF settings.
  * Tweaked some Makefiles so I don't always have to edit them extensively
    to use them in my environment. :)

7/2/05 (frmky)
  * Modified makesymlinks.sh to restore execute permissions to 
    src/autogplot.sh and tests/factLat.pl
  * Applied a patch by Jason Papadopoulos to fix potential problems with
    64-bit 'a' values.

6/30/05 (trilliwig)
  * Smoothed out polynomial selection times for GNFS factorizations from 100