@@ -3,7 +3,7 @@ NAME=template
 clean : ;
 	rm -f cols* deps* factor.easy lpindex* rels* numFF.txt numrels.txt tmp.job *.afb.0
 	rm -f $(NAME).job $(NAME).polsel* $(NAME).fb spairs.*
-	rm -f spmat sp-index .last_spq* depinf tmpdata.000
+	rm -f spmat sp-index .params .last_spq* depinf tmpdata.000
 
 squeaky : clean ;
 	rm -f relations.jpg xprimes.jpg
